test/org/midica/testfiles/failing/cond-undef-not-at-start.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if $x!$x
	0  c  /4
}
